--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "A lightweight canvas library for 2D.",
   "main": "lib/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "tsc --project tsconfig.dev.json --watch",
+    "build": "npm run lint && rimraf ./lib && tsc",
+    "lint": "eslint src --ext .ts --fix"
   },
   "repository": {
     "type": "git",
@@ -20,5 +22,17 @@
   "bugs": {
     "url": "https://github.com/nashaofu/grender/issues"
   },
-  "homepage": "https://github.com/nashaofu/grender#readme"
+  "homepage": "https://github.com/nashaofu/grender#readme",
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^2.22.0",
+    "@typescript-eslint/parser": "^2.22.0",
+    "eslint": "^6.8.0",
+    "eslint-config-standard": "^14.1.0",
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-node": "^11.0.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1",
+    "rimraf": "^3.0.2",
+    "typescript": "^3.8.3"
+  }
 }
