--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -17,7 +17,11 @@ jobs:
         with:
           node-version: 12.x
       - name: Install Dependencies
-        run: yarn install
+        run: yarn
       - name: Build docs
-        run: ls && yarn run docs:build
-
+        run: yarn docs:build
+      - name: Deploy docs
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUBTOKEN }}
+          publish_dir: ./docs/.vuepress/dist
