--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -25,3 +25,4 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUBTOKEN }}
           publish_dir: ./docs/.vuepress/dist
+          publish_branch: gh-pages
