--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -27,9 +27,7 @@ jobs:
         run: yarn docs:build
 
       - name: Deploy docs
-        uses: JamesIves/github-pages-deploy-action@releases/v3
-        with:
-          ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
-          BRANCH: gh-pages
-          FOLDER: docs/.vuepress/dist
-          DEBUG: true
+      uses: peaceiris/actions-gh-pages@v3
+      with:
+        github_token: ${{ secrets.ACCESS_TOKEN }}
+        publish_dir: docs/.vuepress/dist
