--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -1,4 +1,4 @@
-name: workflow
+name: Deploy Docs
 
 on:
   push:
@@ -6,8 +6,8 @@ on:
       - master
 
 jobs:
-  docs:
-    name: docs
+  deploy:
+    name: Deploy
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -21,10 +21,10 @@ jobs:
       - name: Install Dependencies
         run: yarn
 
-      - name: Build docs
+      - name: Build Docs
         run: yarn docs:build
 
-      - name: Deploy docs
+      - name: Deploy Docs
         uses: JamesIves/github-pages-deploy-action@releases/v3
         with:
           ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
