--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -21,6 +21,9 @@ jobs:
       - name: Install Dependencies
         run: yarn
 
+      - name: Build Source
+        run: yarn build
+
       - name: Build Docs
         run: yarn docs:build
 
