--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "grender",
   "version": "0.0.2",
   "description": "A lightweight canvas library for 2D.",
+  "sideEffects": false,
   "types": "lib/index.d.ts",
   "main": "dist/grender.js",
   "module": "lib/index.js",
@@ -38,19 +39,19 @@
     "registry": "https://registry.npmjs.org/"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^3.4.0",
-    "@typescript-eslint/parser": "^3.4.0",
-    "eslint": "^7.3.1",
+    "@typescript-eslint/eslint-plugin": "^4.0.1",
+    "@typescript-eslint/parser": "^4.0.1",
+    "eslint": "^7.8.0",
     "eslint-config-standard": "^14.1.1",
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
     "rimraf": "^3.0.2",
-    "rollup": "^2.18.1",
-    "rollup-plugin-terser": "^6.1.0",
-    "rollup-plugin-typescript2": "^0.27.1",
-    "typescript": "^3.9.5",
-    "vuepress": "^1.5.2"
+    "rollup": "^2.26.9",
+    "rollup-plugin-terser": "^7.0.1",
+    "rollup-plugin-typescript2": "^0.27.2",
+    "typescript": "^4.0.2",
+    "vuepress": "^1.5.4"
   }
 }
