--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "grender",
   "version": "0.0.2",
   "description": "A lightweight canvas library for 2D.",
+  "type": "module",
   "sideEffects": false,
   "types": "lib/index.d.ts",
   "main": "dist/grender.js",
@@ -12,11 +13,12 @@
   ],
   "scripts": {
     "prepublishOnly": "npm run build",
-    "docs:dev": "vuepress dev docs",
-    "docs:build": "vuepress build docs",
-    "dev": "rollup --config rollup.config.js --watch",
+    "docs:dev": "vitepress dev docs",
+    "docs:build": "vitepress build docs",
+    "docs:preview": "vitepress preview docs",
+    "dev": "rollup --config rollup.config.ts --configPlugin typescript --watch",
     "build": "npm run lint && npm run clean && npm run compile",
-    "compile": "tsc && rollup --config rollup.config.js --environment MODE:production",
+    "compile": "tsc && rollup --config rollup.config.ts --configPlugin typescript",
     "lint": "eslint src --ext .ts --fix",
     "clean": "rimraf lib dist"
   },
@@ -39,19 +41,18 @@
     "registry": "https://registry.npmjs.org/"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^4.0.1",
-    "@typescript-eslint/parser": "^4.0.1",
-    "eslint": "^7.8.0",
-    "eslint-config-standard": "^14.1.1",
-    "eslint-plugin-import": "^2.22.0",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.1",
-    "rimraf": "^3.0.2",
-    "rollup": "^2.26.9",
-    "rollup-plugin-terser": "^7.0.1",
-    "rollup-plugin-typescript2": "^0.27.2",
-    "typescript": "^4.0.2",
-    "vuepress": "^1.5.4"
+    "@rollup/plugin-terser": "^0.4.3",
+    "@rollup/plugin-typescript": "^11.1.2",
+    "@typescript-eslint/eslint-plugin": "^6.3.0",
+    "@typescript-eslint/parser": "^6.3.0",
+    "eslint": "^8.37.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-airbnb-typescript": "^17.0.0",
+    "eslint-plugin-import": "^2.27.5",
+    "rimraf": "^5.0.1",
+    "rollup": "^3.27.2",
+    "tslib": "^2.6.1",
+    "typescript": "^5.1.6",
+    "vitepress": "^1.0.0-rc.2"
   }
 }
