--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "A lightweight canvas library for 2D.",
   "type": "module",
   "sideEffects": false,
-  "types": "lib/index.d.ts",
-  "main": "dist/grender.js",
-  "module": "lib/index.js",
+  "types": "dist/index.d.ts",
+  "main": "dist/index.js",
+  "module": "dist/index.js",
   "files": [
     "lib",
     "dist"
@@ -16,9 +16,9 @@
     "docs:dev": "vitepress dev docs",
     "docs:build": "vitepress build docs",
     "docs:preview": "vitepress preview docs",
-    "dev": "rollup --config rollup.config.ts --configPlugin typescript --watch",
+    "dev": "tsc --watch",
     "build": "npm run lint && npm run clean && npm run compile",
-    "compile": "tsc --project tsconfig.build.json && rollup --config rollup.config.ts --configPlugin typescript",
+    "compile": "tsc",
     "lint": "eslint src --ext .ts --fix",
     "clean": "rimraf lib dist"
   },
@@ -41,18 +41,12 @@
     "registry": "https://registry.npmjs.org/"
   },
   "devDependencies": {
-    "@rollup/plugin-terser": "^0.4.3",
-    "@rollup/plugin-typescript": "^11.1.2",
-    "@typescript-eslint/eslint-plugin": "^6.3.0",
-    "@typescript-eslint/parser": "^6.3.0",
-    "eslint": "^8.37.0",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-config-airbnb-typescript": "^17.0.0",
-    "eslint-plugin-import": "^2.27.5",
-    "rimraf": "^5.0.1",
-    "rollup": "^3.27.2",
-    "tslib": "^2.6.1",
-    "typescript": "^5.1.6",
-    "vitepress": "^1.0.0-rc.2"
+    "@eslint/js": "^9.21.0",
+    "eslint": "^9.21.0",
+    "globals": "^16.0.0",
+    "rimraf": "^6.0.1",
+    "typescript": "^5.7.3",
+    "typescript-eslint": "^8.24.1",
+    "vitepress": "^1.6.3"
   }
 }
